syntax = "proto3";

package yandex.cloud.loadtesting.v1;

import "google/api/annotations.proto";
import "yandex/cloud/validation.proto";
import "yandex/cloud/loadtesting/v1/resource_preset.proto";

option go_package = "a.yandex-team.ru/cloud/bitbucket/public-api/yandex/cloud/loadtesting/v1;loadtesting";
option java_package = "yandex.cloud.api.loadtesting.v1";


service ResourcePresetService {
  // Returns the specified resource preset.
  rpc Get (GetResourcePresetRequest) returns (ResourcePreset) {
    option (google.api.http) = { get: "/loadtesting/v1/resourcepresets/{preset_id}" };
  };

  // Retrieves the list of resource presets.
  rpc List (ListResourcePresetsRequest) returns (ListResourcePresetsResponse) {
    option (google.api.http) = { get: "/loadtesting/v1/resourcepresets" };
  };
}

message GetResourcePresetRequest {
  string preset_id = 1 [(yandex.cloud.required) = true, (yandex.cloud.length) = "<=50"];
}

message ListResourcePresetsRequest {
  int64 page_size = 1 [(yandex.cloud.value) = "0-1000"];
  string page_token = 2 [(yandex.cloud.length) = "<=100"];
  string filter = 3 [(yandex.cloud.length) = "<=1000"];
}
message ListResourcePresetsResponse {
  repeated ResourcePreset resource_presets = 1;
  string next_page_token = 2;
}
